--- a/pages/cadastrar_professor.html
+++ b/pages/cadastrar_professor.html
@@ -150,31 +150,33 @@
                                         <input type="text" name="cpf_professor" maxlength="14" required/>
                                     </div>
                                 </fieldset>
-                                <fieldset id="bloco">
+                                <fieldset id="bloco2">
                                     <div class="dados">
-                                        <label id="labelGenero">Gênero:</label>
-                                        <div id="divGenero"> 
-                                            <div id="divRadioGenero">
-                                                <input type="radio" name="sexo_professor" value="M" checked />
+                                        <div id="same_line">
+                                            <label id="labelGenero">Gênero:</label>
+                                            <div id="divGenero"> 
+                                                <div id="divRadioGenero">
+                                                    <input type="radio" name="sexo_professor" value="M" checked />
+                                                </div>
+                                                <div id="divLabelGenero">
+                                                    <label id="genero">Masculino</label>
+                                                </div>
                                             </div>
-                                            <div id="divLabelGenero">
-                                                <label id="genero">Masculino</label>
+                                            <div id="divGenero">
+                                                <div id="divRadioGenero">
+                                                    <input type="radio" name="sexo_professor" value="F" />
+                                                </div>
+                                                <div id="divLabelGenero">
+                                                    <label id="genero">Feminino</label>
+                                                </div>
                                             </div>
-                                        </div>
-                                        <div id="divGenero">
-                                            <div id="divRadioGenero">
-                                                <input type="radio" name="sexo_professor" value="F" />
-                                            </div>
-                                            <div id="divLabelGenero">
-                                                <label id="genero">Feminino</label>
-                                            </div>
-                                        </div>
-                                        <div id="divGenero">
-                                            <div id="divRadioGenero">
-                                                <input type="radio" name="sexo_professor" value="O" />
-                                            </div>
-                                            <div id="divLabelGenero">
-                                                <label id="genero">Outro</label>
+                                            <div id="divGenero">
+                                                <div id="divRadioGenero">
+                                                    <input type="radio" name="sexo_professor" value="O" />
+                                                </div>
+                                                <div id="divLabelGenero">
+                                                    <label id="genero">Outro</label>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
@@ -241,31 +243,33 @@
                                         <input type="text" name="religiao_professor" maxlength="50" required/>
                                     </div>
                                 </fieldset>
-                                <fieldset id="bloco">
+                                <fieldset id="bloco2">
                                     <div class="dados">
-                                        <label id="labelGenero">Turnos</label>
-                                        <div id="divGenero"> 
-                                            <div id="divRadioGenero">
-                                                <input type="checkbox" name="turno_manha_professor" value="" />
+                                        <div id="same_line">
+                                            <label id="labelGenero">Turnos</label>
+                                            <div id="divTurno"> 
+                                                <div id="divCheckboxTurno">
+                                                    <input type="checkbox" name="turno_manha_professor" value="" />
+                                                </div>
+                                                <div id="divLabelGenero">
+                                                    <label id="genero">Manhã</label>
+                                                </div>
                                             </div>
-                                            <div id="divLabelGenero">
-                                                <label id="genero">Manhã</label>
+                                            <div id="divTurno">
+                                                <div id="divCheckboxTurno">
+                                                    <input type="checkbox" name="turno_tarde_professor" value="" />
+                                                </div>
+                                                <div id="divLabelGenero">
+                                                    <label id="genero">Tarde</label>
+                                                </div>
                                             </div>
-                                        </div>
-                                        <div id="divGenero">
-                                            <div id="divRadioGenero">
-                                                <input type="checkbox" name="turno_tarde_professor" value="" />
-                                            </div>
-                                            <div id="divLabelGenero">
-                                                <label id="genero">Tarde</label>
-                                            </div>
-                                        </div>
-                                        <div id="divGenero">
-                                            <div id="divRadioGenero">
-                                                <input type="checkbox" name="turno_noite_professor" value="" />
-                                            </div>
-                                            <div id="divLabelGenero">
-                                                <label id="genero">Noite</label>
+                                            <div id="divTurno">
+                                                <div id="divCheckboxTurno">
+                                                    <input type="checkbox" name="turno_noite_professor" value="" />
+                                                </div>
+                                                <div id="divLabelGenero">
+                                                    <label id="genero">Noite</label>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
