--- a/pages/cronogramas.html
+++ b/pages/cronogramas.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" type="text/css" href="../css/style.css"/>
         <link rel="stylesheet" type="text/css" href="../css/form.css"/>
         <link rel="stylesheet" type="text/css" href="../css/menu.css"/>
-        <link rel="stylesheet" type="text/css" href="../css/tables2.css"/>
+        <link rel="stylesheet" type="text/css" href="../css/tables.css"/>
     </head>
     <body>
         <main class="corpo">
