--- a/pages/cadastrar_cronograma.html
+++ b/pages/cadastrar_cronograma.html
@@ -171,7 +171,7 @@
                                 </fieldset>
                                 <fieldset id="bloco2">
                                     <div class="dados_table">
-                                        <table>
+                                        <table id="cadastrar_cronogramas">
                                             <caption>
                                                 Criar Cronograma
                                             </caption>
